<resources>
    <string name="app_name">Task Pro</string>
    <string name="enter_task_details">Enter Task Details</string>
    <string name="enter_task">Enter Task</string>
    <string name="priority">Priority</string>
    <string name="add_task">Add Task</string>
    <string name="taskpro">TaskPro</string>
    <string name="clear_all">Clear All</string>
    <string name="add_new_task">Add New Task</string>
    <string name="no_tasks_available">No tasks available</string>
    <string name="manage_your_day">Manage Your Day</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>