<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg6"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/task_list_menu_document_svgrepo_com"
            android:fontFamily="@font/poppins"
            android:paddingStart="5dp"
            android:text="@string/taskpro"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/deleteAll"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#FF0000"
            android:text="@string/clear_all"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Adjusted SearchView layout_width to match_parent -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_search"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:queryHint="Search by title"
        android:textColor="@color/black"
        android:textColorHint="@color/black" /> <!-- Set transparent background -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            tools:listitem="@layout/view" />

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="25dp"
            android:drawableLeft="@drawable/baseline_add_task_24"
            android:elevation="8dp"
            android:shadowColor="#000000"
            android:text="@string/add_new_task"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:background="@drawable/custom_edittetext"
            app:backgroundTint="@color/blue" />

        <!-- TextView for displaying "No tasks available" message -->
        <TextView
            android:id="@+id/noTasksTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_tasks_available"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>
